test_suite/alan-2022-examples/passing/000140_deriv.alan
source H3q begin if 7564 then leave end end
