test_suite/alan-2022-examples/failing/006530_mutation.alan
source Z begin leave 0 or integer 4 end
